Apply patch. rdar://problem/60396286

Cherry-pick r258038. rdar://problem/60396286

        2020-03-06  Mark Lam  <mark.lam@apple.com>

    Fix some issues in the ARM64 moveConditionallyAfterFloatingPointCompare() and moveDoubleConditionallyAfterFloatingPointCompare().
    https://bugs.webkit.org/show_bug.cgi?id=208731
    <rdar://problem/59222568>

    Patch by Mark Lam <mark.lam@apple.com> on 2020-03-06
    Reviewed by Saam Barati.

    Both the ARM64 moveConditionallyAfterFloatingPointCompare() and
    moveDoubleConditionallyAfterFloatingPointCompare() had the following issues:

    1. For the DoubleNotEqual condition, they fail to set the result register if
       one or both of the comparison operands is a NaN.

    2. For the DoubleEqualOrUnordered condition, they can clobber the else case
       input register if one of the comparison operands is a NaN.

    This patch fixes both of these, and exhaustive testmasm test cases for affected
    MacroAssembler instruction emitters using these functions.

    * assembler/MacroAssemblerARM64.h:
    (JSC::MacroAssemblerARM64::moveConditionallyAfterFloatingPointCompare):
    (JSC::MacroAssemblerARM64::moveDoubleConditionallyAfterFloatingPointCompare):
    * assembler/testmasm.cpp:
    (JSC::testCompareDouble):
    (JSC::testCompareDoubleSameArg):
    (JSC::testMoveConditionallyFloatingPoint):
    (JSC::testMoveConditionallyDouble2):
    (JSC::testMoveConditionallyDouble3):
    (JSC::testMoveConditionallyDouble3DestSameAsThenCase):
    (JSC::testMoveConditionallyDouble3DestSameAsElseCase):
    (JSC::testMoveConditionallyFloat2):
    (JSC::testMoveConditionallyFloat3):
    (JSC::testMoveConditionallyFloat3DestSameAsThenCase):
    (JSC::testMoveConditionallyFloat3DestSameAsElseCase):
    (JSC::testMoveDoubleConditionallyDouble):
    (JSC::testMoveDoubleConditionallyDoubleDestSameAsThenCase):
    (JSC::testMoveDoubleConditionallyDoubleDestSameAsElseCase):
    (JSC::testMoveDoubleConditionallyFloat):
    (JSC::testMoveDoubleConditionallyFloatDestSameAsThenCase):
    (JSC::testMoveDoubleConditionallyFloatDestSameAsElseCase):
    (JSC::testMoveConditionallyFloatingPointSameArg):
    (JSC::testMoveConditionallyDouble2SameArg):
    (JSC::testMoveConditionallyDouble3SameArg):
    (JSC::testMoveConditionallyFloat2SameArg):
    (JSC::testMoveConditionallyFloat3SameArg):
    (JSC::testMoveDoubleConditionallyDoubleSameArg):
    (JSC::testMoveDoubleConditionallyFloatSameArg):
    (JSC::run):

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@258590 268f45cc-cd09-0410-ab3c-d52691b4dbfc